--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/backend/node_modules
+node_modules
 /frontend/node_modules
 /.pnp
 .pnp.js
@@ -13,7 +13,7 @@
 /build
 
 # misc
-/backend/.env
+.env
 .DS_Store
 .env.local
 .env.development.local
