--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
     "nodemon": "nodemon src/index.js"
   },
   "keywords": [],
@@ -21,5 +22,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "engines":{
+    "node": "12.18.1"
   }
+  
 }
