--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build",
     "nodemon": "nodemon src/index.js"
   },
   "keywords": [],
